Avoid set focus on mobile

--- a/src/css/floating-menu.css
+++ b/src/css/floating-menu.css
@@ -42,7 +42,7 @@
 
 .blend-floating-menu-title {
     font-weight: bold;
-    background: #eee;
+    background: var(--body);
     height: 38px;
     line-height: 34px;
 }
@@ -96,14 +96,14 @@
 }
 
 .action-list li:hover {
-    background-color: #ccc;
+    background-color: var(--body);
 }
 
 li.floating-menu-item-mini-padding {
     padding: 2px 6px;
     height: 30px;
     line-height: 28px;
-    border: solid 1px #eee;
+    border: solid 1px var(--body);
 }
 
 li.floating-menu-item-mini-padding input {
